# otparse-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  debug_bacapp.py  debug_bacapp2.py  debug_pid.py  docker-compose.yml  pyproject.toml  requirements.txt  run_bacnet_test.py  run_modbus_test.py
otparse/: models.py  server.py
otparse/analyzers/: devices.py
otparse/parsers/: bacnet.py  common.py  modbus.py
tests/: test_bacnet_fixture.py  test_modbus_parser.py
tests/fixtures/bacnet/: bacnet_discovery_session_expected.json
tests/fixtures/modbus/: modbus_diag_session_expected.json
