[project]
name = "otparse"
version = "0.1.0"
description = "Containerized MCP server for OT/ICS PCAP parsing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.10.1",
  "pyshark>=0.6",
  "pydantic>=2.8",
]

[project.scripts]
otparse = "otparse.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["otparse", "otparse.parsers", "otparse.analyzers"]
